typescript/checker/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates19_ES6.ts.stderr
error: Invalid unciode code point
 --> $DIR/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates19_ES6.ts:3:13
  |
3 | var x = `\u{}`;
  |             ^

